correção de estilo e descrição

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </section>
     
     <footer>
-        <p>Curso desenvolvido por <a href="https://github.com/joseffreitasjr" target="_blank">José F. Freitas Jr.</a>, créditos: <a href="https://www.cursoemvideo.com/" target="_blank">Curso em Vídeo</a></p>
+        <p>Projeto desenvolvido por <a href="https://github.com/joseffreitasjr" target="_blank">José F. Freitas Jr.</a>, créditos: <a href="https://www.cursoemvideo.com/" target="_blank">Curso em Vídeo</a></p>
     </footer>
 </body>
 </html>
